Admin logic + shell implemented